--- a/skills.html
+++ b/skills.html
@@ -36,7 +36,7 @@
       <div class ="banner">
         <h3 class="banner-subtitle">Over one hundred flavour of tea</h3>
         <h1 class="banner-title">speacially crafted tea</h1>
-        <a href="./skills.html" class="banner-btn"></a>
+        <a href="./skills.html" class="banner-btn">explore</a>
       </div>
     </header>
 
