--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </article>
             <!-- contact form -->
             <article class="contact-form">
-                <form action="" method="POST" class="form-group">
+                <form action="https://formspree.io/f/xpzeqpge" method="POST" class="form-group">
                     <input type="text" name="name" placeholder="please enter name" class="form-control">
                     <input type="email" name="email" placeholder="please enter mail" class="form-control">
                     <textarea name="message" rows="5" class="form-control"></textarea>
