--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
 
     <!-- about -->
     <section class="about">
-         <div class="section-center clearfix">
-            <!-- first column -->
-            <article class="about-img">
-                <div class="about-picture-container">
-                    <img src="./images/about-bcg.jpg" alt="tea kettle" class="about-picture"/>
-                </div>
-            </article>
-            <!-- second column -->
-            <article class="about-info">
-                <!-- section title -->
-                <div>
-                    <h3 class="section-subtitle">about our</h3>
-                    <h2 class="section-title">tea station</h2>
-                </div>
-                <!-- end section title -->
-                <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
-                <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
-                <a href="./about.html" class="main-btn"></a>
-            </article>
-         </div>
-    </section>
-    <!-- end of about -->
+        <div class="section-center clearfix">
+           <!-- first column -->
+           <article class="about-img">
+               <div class="about-picture-container">
+                   <img src="./images/about-bcg.jpg" alt="tea kettle" class="about-picture"/>
+               </div>
+           </article>
+           <!-- second column -->
+           <article class="about-info">
+               <!-- section title -->
+               <div>
+                   <h3 class="section-subtitle">about our</h3>
+                   <h2 class="section-title">tea station</h2>
+               </div>
+               <!-- end section title -->
+               <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
+               <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
+               <a href="./about.html" class="main-btn">learn more</a>
+           </article>
+        </div>
+   </section>
+   <!-- end of about -->
     <!-- products -->
     <section class="products">
         <div class="section-center clearfix">
