--- a/about.html
+++ b/about.html
@@ -6,38 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <!-- styles -->
-    <link rel = "stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <!-- font awesome -->
-    <link rel=" stylesheet" href="./fontawesome-free-6.2.1-web/css/all.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.2.1-web/css/all.css">
 </head>
 <body>
     <!-- navigation button -->
-    <span class="nav-btn">
+    <span class="nav-btn" id="nav-btn">
         <i class="fa-solid fa-bars-staggered"></i>
     </span>
 
     <!-- navigation bar -->
     <nav class="navbar" id="navbar">
-       <div class="navbar-header">
-           <span class = "nav-close" id="nav-close">
-            <i class="fas fa-times"></i>
-           </span>
-       </div>
-       <u1 class="nav-items">
-        <li><a href="./index.html"class ="nav-link">home</a><a</li>
-        <li><a href="./skills.html"class ="nav-link">skills</li>
-        <li><a href="./about.html"class ="nav-link"></a>about</li>
-        <li><a href="./products.html"class ="nav-link"></a>products</li>
-        
-       </u1>
+        <div class="navbar-header">
+            <span class="nav-close" id="nav-close">
+                <i class="fas fa-times"></i>
+            </span>
+        </div>
+        <ul class="nav-items">
+            <li><a href="./index.html" class="nav-link">home</a></li>
+            <li><a href="./skills.html" class="nav-link">skills</a></li>
+            <li><a href="./about.html" class="nav-link">about</a></li>
+            <li><a href="./products.html" class="nav-link">products</a></li>
+        </ul> 
     </nav>
     <!-- header -->
-    <header class ="header">
-      <div class ="banner">
-        <h3 class="banner-subtitle">Over one hundred flavour of tea</h3>
-        <h1 class="banner-title">speacially crafted tea</h1>
-        <a href="./skills.html" class="banner-btn">explore</a>
-      </div>
+    <header class="header">
+        <div class="banner">
+            <h3 class="banner-subtitle">Over one hundred flavours of tea</h3>
+            <h1 class="banner-title">speacially crafted tea</h1>
+            <a href="./skills.html" class="banner-btn">explore</a>
+        </div>
     </header>
 
     <!-- end of header -->
@@ -46,52 +45,55 @@
     <!-- end of content divider -->
     <!-- about -->
     <section class="about">
-        <div class ="section-center clearfix">
-            <!-- first column -->
-            <article class="about-img">
-                <div class="about-picture-container">
-                    <imag src="./images/about-bcg.jpg" alt="tea kettle" class="about-picture"></imag>
-                </div>
-            </article>
-            <!-- second column -->
-            <article class ="about-info">
-                <!-- section title -->
-                <div>
-                    <h3 class="section-subtitle">about our</h3>
-                    <h2 class="section-title">tea Station</h2>
-                </div>
-                <!-- end section title -->
-                <p class="about-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero voluptatem minima deserunt! Cumque ullam totam commodi soluta dignissimos illum assumenda reiciendis, vero reprehenderit quaerat quo, iusto doloribus sequi, ut provident.</p>
-                <p class="about-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero voluptatem minima deserunt! Cumque ullam totam commodi soluta dignissimos illum assumenda reiciendis, vero reprehenderit quaerat quo, iusto doloribus sequi, ut provident.</p>
-                <a href="./about.html" class="main-btn"></a>
-            </article>
+        <div class="section-center clearfix">
+           <!-- first column -->
+           <article class="about-img">
+               <div class="about-picture-container">
+                   <img src="./images/about-bcg.jpg" alt="tea kettle" class="about-picture"/>
+               </div>
+           </article>
+           <!-- second column -->
+           <article class="about-info">
+               <!-- section title -->
+               <div>
+                   <h3 class="section-subtitle">about our</h3>
+                   <h2 class="section-title">tea station</h2>
+               </div>
+               <!-- end section title -->
+               <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
+               <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
+               <a href="./about.html" class="main-btn">learn more</a>
+           </article>
         </div>
-        </section>
-        <!-- end of about -->
-          <!-- footer section -->
-          <footer class="footer">
-            <div clas="section-center">
-            <div class="social-icon">
-                <!-- social icon -->
-                <a href="#" class="social-icon">
-                     <i class = "fa-brand fa-square-facebook"></i>
-                </a>
-                     <!-- social icon -->
-                     <a href="#" class="social-icon">
-                   <i class = "fa-brand fa-square-twitter"></i>
-                     <!-- social icon -->
-                     <a href="#" class="social-icon">
-                   <i class = "fa-brand fa-square-instagram"></i>
-             </a> 
-             <!-- end of social icon -->               
+   </section>
+   <!-- end of about -->
 
-            </div>
-            <p class="footer-text">
-                &copy; <span class="text-perimary">tea station</span>all rights reserved
-            </p>
+   <!-- content-divider -->
+   <div class="content-divider"></div>
+   <!-- end of content divider -->
+   <!-- footer section -->
+   <footer class="footer">
+    <div class="section-center">
+        <div class="social-icons">
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-twitter"></i>
+            </a>
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <!-- end of social icon -->
         </div>
-        </footer>
-
-      <script src="./app.js" ></script>
+        <p class="footer-text">
+            &copy; <span class="text-primary">tea station</span> all rights reserved
+        </p>
+    </div>
+</footer>
+<script src="./app.js"></script>
 </body>
-</html>
+</html>s
